@@ -914,6 +914,123 @@ literal|null
 condition|)
 block|{
 comment|// subclass can set this directly
+specifier|final
+name|String
+name|CTX_PARAM
+init|=
+literal|"spatialContextFactory"
+decl_stmt|;
+specifier|final
+name|String
+name|OLD_SPATIAL4J_PREFIX
+init|=
+literal|"com.spatial4j.core"
+decl_stmt|;
+specifier|final
+name|String
+name|NEW_SPATIAL4J_PREFIX
+init|=
+literal|"org.locationtech.spatial4j"
+decl_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|argEntry
+range|:
+name|args
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+comment|// "JTS" is a convenience alias
+if|if
+condition|(
+name|argEntry
+operator|.
+name|getKey
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|CTX_PARAM
+argument_list|)
+operator|&&
+name|argEntry
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|"JTS"
+argument_list|)
+condition|)
+block|{
+name|argEntry
+operator|.
+name|setValue
+argument_list|(
+literal|"org.locationtech.spatial4j.context.jts.JtsSpatialContextFactory"
+argument_list|)
+expr_stmt|;
+continue|continue;
+block|}
+comment|// Warn about using old Spatial4j class names
+if|if
+condition|(
+name|argEntry
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|OLD_SPATIAL4J_PREFIX
+argument_list|)
+condition|)
+block|{
+name|log
+operator|.
+name|warn
+argument_list|(
+literal|"Replace '"
+operator|+
+name|OLD_SPATIAL4J_PREFIX
+operator|+
+literal|"' with '"
+operator|+
+name|NEW_SPATIAL4J_PREFIX
+operator|+
+literal|"' in your schema."
+argument_list|)
+expr_stmt|;
+name|argEntry
+operator|.
+name|setValue
+argument_list|(
+name|argEntry
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|replace
+argument_list|(
+name|OLD_SPATIAL4J_PREFIX
+argument_list|,
+name|NEW_SPATIAL4J_PREFIX
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|//Solr expects us to remove the parameters we've used.
 name|MapListener
 argument_list|<
